# construct-core

./: .gitignore  AGENTS.md  Cargo.toml  EXTRACTION_STATUS.md  GEMINI.md  README.md
.cargo/: audit.toml  config.toml
.github/workflows/: CI.md  ci.yml
benches/: crypto_bench.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: main.rs
src/: config.rs  construct_core.udl  device_id.rs  error.rs  lib.rs  pow.rs  uniffi_bindings.rs  wire_payload.rs
src/api/: contacts.rs  crypto.rs  messaging.rs  mod.rs
src/auth/: mod.rs  token_manager.rs
src/cfe/: compat.rs  envelope.rs  error.rs  mod.rs  types.rs
src/crypto/: client_api.rs  invite_crypto.rs  key_transparency.rs  keys.rs  master_key.rs  mod.rs  pq_double_ratchet.rs  pq_x3dh.rs  provider.rs  recovery.rs  session_api.rs  social_recovery.rs  suite_id.rs
src/crypto/handshake/: mod.rs  x3dh.rs
src/crypto/messaging/: double_ratchet.rs  mod.rs
src/crypto/messaging/double_ratchet/: internals.rs  messaging.rs  mod.rs  storage.rs  tests.rs
src/crypto/privacy_pass/: mod.rs
src/crypto/suites/: classic.rs  mod.rs
src/orchestration/: ack_store.rs  actions.rs  clock.rs  healing_queue.rs  message_router.rs  mod.rs  orchestrator.rs  platform_bridge.rs  pq_contribution.rs  session_lifecycle.rs
src/protocol/: long_polling.rs  messages.rs  mod.rs  request_signing.rs  rest_transport.rs  validation.rs  wire.rs
src/state/: app.rs  contacts.rs
src/storage/: indexeddb.rs  indexeddb_ops.rs  indexeddb_traits.rs  ios_adapter.rs  ios_callbacks.rs  memory.rs  mod.rs  models.rs  traits.rs  traits.rs.backup
src/traffic_protection/: cover_traffic.rs  mod.rs  padding.rs  timing.rs
src/utils/: b64.rs  crypto_utils.rs  error.rs  mod.rs  serialization.rs  time.rs
tests/: state_management_test.rs
