[package]
name = "construct-core"
version = "0.2.6"
authors = ["Konstruct Team"]
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/maximeliseyev/construct-core"
description = "Core cryptographic engine for Construct Messenger with E2EE"
keywords = ["crypto", "e2ee", "messaging", "x3dh", "double-ratchet"]
categories = ["cryptography", "web-programming"]

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]
name = "construct_core"

[lints.rust]
unsafe_attr_outside_unsafe = "allow"

# Feature flags для разных платформ
[features]
default = []
# Платформенные features (взаимоисключающие)
ios = ["uniffi"]
wasm = []
# Опциональные возможности
post-quantum = [
    "dep:pqcrypto-mlkem",
    "dep:pqcrypto-mldsa",
    "dep:pqcrypto-traits",
]
# Для тестов и разработки
test = ["desktop"]
desktop = ["tokio/rt"]

[dependencies]
# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
rmp-serde = "1.1"
postcard = { version = "1", default-features = false, features = ["alloc"] }
base64 = "0.22"

# Ошибки и утилиты
thiserror = "2"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
hex = "0.4"

# Криптография
x25519-dalek = { version = "2.0", features = ["reusable_secrets", "static_secrets"] }
ed25519-dalek = { version = "2.0", features = ["std", "rand_core"] }
chacha20poly1305 = { version = "0.10", features = ["std", "getrandom"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hkdf = "0.12"
sha2 = "0.10"
argon2 = "0.5"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1.0", features = ["zeroize_derive"] }

# Post-Quantum (optional) - ML-KEM and ML-DSA (NIST standardized names)
pqcrypto-mlkem = { version = "0.1", optional = true }
pqcrypto-mldsa = { version = "0.1", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }

# iOS bindings (optional)
uniffi = { version = "0.30", features = ["build"], optional = true }

# WASM bindings (optional)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = [
    # REST API / Fetch
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestCredentials",
    "Response",
    "Headers",
    "AbortSignal",
    # WebSocket (legacy, will be removed)
    "WebSocket",
    "CloseEvent",
    "ErrorEvent",
    "MessageEvent",
    "BinaryType",
    # IndexedDB
    "IdbDatabase",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbObjectStoreParameters",
    "IdbVersionChangeEvent",
    "IdbObjectStore",
    "IdbIndex",
    "IdbFactory",
    # Common
    "Window",
    "console",
    "Event",
] }
serde-wasm-bindgen = { version = "0.6" }
wasm-bindgen-futures = { version = "0.4" }
js-sys = { version = "0.3" }
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# Async runtime (optional, для desktop тестов)
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], optional = true }

[dev-dependencies]
hex = "0.4"

[build-dependencies]
uniffi = { version = "0.30", features = ["build"] }

[package.metadata.uniffi.bindings]
swift = true
