[workspace]
members = [".", "crates/desktop"]
resolver = "2"

[package]
name = "construct-core"
version = "0.4.1"
authors = ["Konstruct Team"]
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/maximeliseyev/construct-core"
description = "Core cryptographic engine for Construct Messenger with E2EE"
keywords = ["crypto", "e2ee", "messaging", "x3dh", "double-ratchet"]
categories = ["cryptography"]

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]
name = "construct_core"

[lints.rust]
unsafe_attr_outside_unsafe = "allow"

# Feature flags
[features]
default = []
ios = ["uniffi", "dep:construct-ice", "construct-ice?/tls"]
# mac = same capabilities as ios — UniFFI Swift bindings + construct-ice TLS proxy
# Used when building libconstruct_core_mac.a for native macOS target
mac = ["uniffi", "dep:construct-ice", "construct-ice?/tls"]
post-quantum = [
    "dep:ml-kem",
    "dep:getrandom_pq",
    "dep:pqcrypto-mldsa",
    "dep:pqcrypto-traits",
]
desktop = ["tokio/rt"]

[dependencies]
# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
rmp-serde = "1.1"
postcard = { version = "1", default-features = false, features = ["alloc"] }
base64 = "0.22"

# Ошибки и утилиты
thiserror = "2"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
time = { version = "0.3.47", features = ["formatting", "parsing"] }
hex = "0.4"
bytes = "1.11.1"  # Direct dependency to ensure security fix for RUSTSEC-2026-0007

# Криптография
x25519-dalek = { version = "2.0", features = ["reusable_secrets", "static_secrets"] }
ed25519-dalek = { version = "2.0", features = ["std", "rand_core"] }
chacha20poly1305 = { version = "0.10", features = ["std", "getrandom"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
bip39 = { version = "2.0", features = ["rand"] }
argon2 = "0.5"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1.0", features = ["zeroize_derive"] }

# Post-Quantum (optional) - ML-KEM and ML-DSA (NIST standardized names)
ml-kem = { version = "0.3.0-rc.0", optional = true }
getrandom_pq = { package = "getrandom", version = "0.4", features = ["sys_rng"], optional = true }
pqcrypto-mldsa = { version = "0.1", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }

# iOS bindings (optional)
uniffi = { version = "0.30", features = ["build"], optional = true }

# Traffic obfuscation — ICE (obfs4 pluggable transport)
construct-ice = { path = "../construct-ice", features = ["ffi"], optional = true }

# Async runtime (optional, для desktop)
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], optional = true }

[dev-dependencies]
hex = "0.4"

[build-dependencies]
uniffi = { version = "0.30", features = ["build"] }

[package.metadata.uniffi.bindings]
swift = true
